hub/assets/schedule_popup/style.styl
@import 'nib'

.schedule-popup
    width: 800px

    .modal-body
        min-height: 480px
        max-height: 480px

    &__content
        max-height: 400px
        min-height: 400px
        overflow-y: scroll
        padding-top: 20px
        padding-bottom: 10px

    &__content-loading
        z-index: 0
        width: 768px
        height: 400px
        position: absolute
        background: white
        background-repeat: no-repeat
        background-position: center
        opacity: 0
        &:not(.shown)
            transition: opacity .3s ease
        &.shown
            z-index: 100500
            opacity: 1

    &__record
        margin-bottom: 15px
        &-name
            display: inline
            margin-top: 0
        &-author
            display: inline
            font-size: 10px
            margin: 0

    .slots
        margin-left: -20px

    &__date-selector
        display: inline
        margin-right: 50px

        .form-group
            padding-left: 20px
        .bootstrap-select
            max-width: 150px

    &__not-loaded
        height: 340px
        text-align: center
        .not-found
            relative: top 50%
            transform: translateY(-50%)

    &__err
        display: inline-block
        margin-right: 30px

    &__submit
        transition: opacity .05s ease

